   * gains new methods for object of class "Estimate" (which could also be 
     seen as "fitted" objects...)
   * additional argument added.points.CI to allow for  additional evaluation 
     points for the confidence intervals in the range of the seen data	 
   * now by default has datax = TRUE
   * fixed issue with labeling
   * issues with datax fixed
+ returnlevelplot
   * similar as qqplot as to additional methods
   * returnlevelplot now gains an argument threshold for POT
   * set datax argument in case it is missing in returnlevelplot ...	  
   * issues with datax fixed
+ new internal method  .checkEstClassForParamFamily-method to be called 
  immediately before returning an Estimate object (in functions Estimator(), 
  MCEstimator(), MDEstimator(), MLEstimator()); this allows to return an
  object of S4 class specific to the resp. parametric family (by means of
  S4 method dispatch); this is used in pkg 'RobExtremes' to produce, e.g., 
  objects of class "GEVMCEstimate", i.e. which inherit from both 
  "MCEstimate" and "GEVEstimate", so that a diag-method for 
  "GEVEstimate" becomes available for this class.
+ enhanced imports in DESCRIPTION by explicating second order imports

  BUGFIXES:


+ fixed issue with slot withPosRestr in ParamFamParameter.R 
+ fixed issue with check.validity (reported by B.Spangl)
+ fixed some minor issue in existsPIC (in case we get 0 matrix, and less strict tolerance) 
+ fixed issue with returnlevelplot discovered by B. Spangl -- points had not been ordered 
+ fixed CIs for qqplot and returnlevelplot

##############
v 2.5
##############

user-visible CHANGES:

GENERAL ENHANCEMENTS:
+ cleaned DESCRIPTION and NAMESPACE file as to Imports/Depends

under the hood:
+ For speeding up things, we now have an option withL2derivDistr = TRUE which
  if FALSE skips computing the image distribution in two dimensional models,
  i.e., have switched slot L2derivDistr from "DistrList" to "OptionalDistrList".
