@@ -41,11 +41,15 @@ under the hood:
    * now by default has datax = TRUE
    * fixed issue with labeling
    * issues with datax fixed
+   * gains argument jit.tol to allow jittering to take place also for
+     continuous observations, if observations are "too" close to each other
 + returnlevelplot
    * similar as qqplot as to additional methods
    * returnlevelplot now gains an argument threshold for POT
    * set datax argument in case it is missing in returnlevelplot ...	  
    * issues with datax fixed
+   * gains argument jit.tol to allow jittering to take place also for
+     continuous observations, if observations are "too" close to each other
 + new internal method  .checkEstClassForParamFamily-method to be called 
   immediately before returning an Estimate object (in functions Estimator(), 
   MCEstimator(), MDEstimator(), MLEstimator()); this allows to return an
@@ -55,6 +59,7 @@ under the hood:
   "MCEstimate" and "GEVEstimate", so that a diag-method for 
   "GEVEstimate" becomes available for this class.
 + enhanced imports in DESCRIPTION by explicating second order imports
++ helper function .isReplicated gains an optional argument tol
 
   BUGFIXES:
 
